Archive2/da/a2c7d956f9ea9a/output
main.cpp:28:12: error: need 'typename' before 'Count<(((sizeof (f(cn<65>())) / sizeof (bool)) - 1) + 2)>::type' because 'Count<(((sizeof (f(cn<65>())) / sizeof (bool)) - 1) + 2)>' is a dependent scope
     static Count<COUNT + 2>::type f(cn<COUNT + 2>);
            ^
